--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,23 @@
 }
 
 .contact-pic img {
-  width: auto;
+  width: 80%;
   height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.f1-3 {
+  font-size: 1.3rem;
+}
+
+@media only screen and (max-width: 560px) {
+  .about-me {
+    font-size: 1.6rem;
+  }
+
+  .sub-mobile {
+    font-size: 2rem;
+  }
 }
